--- a/styles.css
+++ b/styles.css
@@ -288,7 +288,7 @@ body {
     gap: 1.25rem;
     height: auto;
     margin-bottom: 0.3125rem;
-    background-image: url("./assets/big_img.png");
+    background-image: url("./assets/bg_2x.webp");
   }
 }
 
